Bug: Fixed X-Frame-Option problem on Mobile device with YouToub video, got embed link from YouToube

--- a/static/css/history.css
+++ b/static/css/history.css
@@ -52,7 +52,7 @@ body {
     align-content: center;
 }
 
-.flex-items:nth-child(1) {
+.flex-items:nth-child(1) {    
     display: block;
     flex-grow: 0;
     flex-shrink: 1;
@@ -154,10 +154,5 @@ body {
 
     .pt-xs-1 {
         padding-top: 1.5rem;
-    }
-
-    iframe {
-        width: 300px;
-        height: 315px;
-    }
+    }    
 }
